<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>de.tu-berlin</groupId>
	<artifactId>zeroCUTS</artifactId>
	<version>0.0.1-final_runs</version>

	<name>zeroCUTS project</name>
	<description>zeroCUTS project</description>

	<parent>
		<groupId>org.matsim</groupId>
		<artifactId>matsim-all</artifactId>
		<version>2026.0-2026w10</version>
<!--        <version>2026.0-PR4435</version>-->
<!--		        <version>2026.0-SNAPSHOT</version>-->
		<relativePath/>
	</parent>

	<properties>

		<!-- Don't modify this, change the parent version instead! -->
		<matsim.version>${project.parent.version}</matsim.version>

		<main.class>org.matsim.vsp.wasteCollection.Berlin.Run_Abfall</main.class>

		<maven.compiler.release>21</maven.compiler.release>
	</properties>

	<repositories>

		<!-- Geotools is not on Maven central -->
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>

		<!-- Repository for MATSim releases (MATSim is not on Maven central) -->
		<repository>
			<id>matsim</id>
			<url>https://repo.matsim.org/repository/matsim</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- This is the matsim "core": -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<!-- This is the matsim freight contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>freight</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<!-- This is the matsim application contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>application</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<!-- This is the matsim small-scale-traffic-generation contrib: -->
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>small-scale-traffic-generation</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>simwrapper</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>emissions</artifactId>
			<version>${project.parent.version}</version>
		</dependency>

		<!--MATSim test infrastructure. Not transitive. -->
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<type>test-jar</type>
			<version>${project.parent.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Junit 5 testing. Version is inherited from the parent project (MATSim), thus not needed here -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<properties>
						<property>
							<name>listener</name>
							<value>org.matsim.api.core.v01.AutoResetIdCaches</value>
						</property>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<properties>
						<property>
							<name>listener</name>
							<value>org.matsim.api.core.v01.AutoResetIdCaches</value>
						</property>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<version>9.0.2</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
				<configuration>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<gitDescribe>
						<tags>true</tags>
					</gitDescribe>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<outputFile>${project.basedir}/${project.build.finalName}-${git.commit.id.describe}.jar</outputFile>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<manifestEntries>
										<!--suppress UnresolvedMavenProperty -->
										<Main-Class>${main.class}</Main-Class>
										<Specification-Vendor>org.matsim</Specification-Vendor>
										<Implementation-Vendor>org.matsim</Implementation-Vendor>
										<Implementation-Version>${project.version}</Implementation-Version>
										<!--suppress UnresolvedMavenProperty -->
										<SCM-Revision>${git.commit.id.describe}</SCM-Revision>
										<Multi-Release>true</Multi-Release>
									</manifestEntries>
								</transformer>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
							</transformers>
							<filters>
								<!-- Avoid signature checking -->
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
								<!-- Force some inclusion because of minimizing -->
								<filter>
									<artifact>org.apache.logging.log4j:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>xerces:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.hibernate.validator:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
								<filter>
									<artifact>org.glassfish:*</artifact>
									<includes>
										<include>**</include>
									</includes>
								</filter>
							</filters>
							<minimizeJar>false</minimizeJar>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>generate-git-changes</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>

								<!-- sicherstellen, dass target/ existiert -->
								<mkdir dir="${project.build.directory}" />

								<!-- Header in git-changes.txt schreiben -->
								<!--suppress UnresolvedMavenProperty -->
								<echo file="${project.build.directory}/git-changes.txt">
									Build-Commit: ${git.commit.id.describe}

									Uncommitted changes relative to ${git.commit.id.describe}
									(status and diff below may be empty if working tree is clean).

									== git status --short ==
								</echo>

								<!-- git status -short in temporäre Datei -->
								<exec executable="git" dir="${basedir}"
									  output="${project.build.directory}/git-status.tmp">
									<arg value="status" />
									<arg value="--short" />
								</exec>

								<!-- git diff in temporäre Datei -->
								<exec executable="git" dir="${basedir}"
									  output="${project.build.directory}/git-diff.tmp">
									<arg value="diff" />
								</exec>

								<!-- Status-Ausgabe anhängen -->
								<concat destfile="${project.build.directory}/git-changes.txt"
										append="true">
									<fileset file="${project.build.directory}/git-status.tmp" />
								</concat>

								<!-- Überschrift für Diff anhängen -->
								<echo file="${project.build.directory}/git-changes.txt"
									  append="true">

									== git diff ==
								</echo>

								<!-- Diff-Ausgabe anhängen -->
								<concat destfile="${project.build.directory}/git-changes.txt"
										append="true">
									<fileset file="${project.build.directory}/git-diff.tmp" />
								</concat>

							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
		<resources>
			<!-- git-changes.txt aus target ins JAR legen -->
			<resource>
				<directory>${project.build.directory}</directory>
				<includes>
					<include>git-changes.txt</include>
				</includes>
				<targetPath>META-INF</targetPath>
			</resource>
		</resources>
	</build>
</project>
